fix: dark mode support in parameter

--- a/src/styles/Param.scss
+++ b/src/styles/Param.scss
@@ -239,6 +239,9 @@
   font-family:'Roboto', sans-serif;
   font-size: 1.05em;
   font-weight: 200;
+
+  background-color: var(--mid-control-bg);
+  color: var(--mid-control-font);
 }
 
 
